tests/snapshots/compile__wgsl_transform_domainwarp_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_mix12_amount: f32,
    u_control_rgba11_a: f32,
    u_control_rgba11_b: f32,
    u_control_rgba11_g: f32,
    u_control_vignette10_radius: f32,
    u_control_vignette10_softness: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette6_radius: f32,
    u_control_vignette6_softness: f32,
    u_control_vignette7_radius: f32,
    u_control_vignette7_softness: f32,
    u_control_vignette8_radius: f32,
    u_control_vignette8_softness: f32,
    u_control_vignette9_radius: f32,
    u_control_vignette9_softness: f32,
    u_count_domainwarp1_clock: vec2f,
    u_opt_mix12_curve: i32,
    u_opt_mix12_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn mod289_3d_v3(x: vec3f) -> vec3f { return x - floor(x * (1.0 / 289.0)) * 289.0; }
fn mod289_3d_v4(x: vec4f) -> vec4f { return x - floor(x * (1.0 / 289.0)) * 289.0; }
fn permute3d(x: vec4f) -> vec4f { return mod289_3d_v4(((x * 34.0) + 1.0) * x); }
fn taylorInvSqrt3d(r: vec4f) -> vec4f { return 1.79284291400159 - 0.85373472095314 * r; }

fn snoise3(v: vec3f) -> f32 {
    const C = vec2f(1.0 / 6.0, 1.0 / 3.0);
    const D = vec4f(0.0, 0.5, 1.0, 2.0);
    var i = floor(v + dot(v, C.yyy));
    let x0 = v - i + dot(i, C.xxx);
    let g = step(x0.yzx, x0.xyz);
    let l = 1.0 - g;
    let i1 = min(g.xyz, l.zxy);
    let i2 = max(g.xyz, l.zxy);
    let x1 = x0 - i1 + C.xxx;
    let x2 = x0 - i2 + C.yyy;
    let x3 = x0 - D.yyy;
    i = mod289_3d_v3(i);
    let p = permute3d(permute3d(permute3d(
        i.z + vec4f(0.0, i1.z, i2.z, 1.0))
        + i.y + vec4f(0.0, i1.y, i2.y, 1.0))
        + i.x + vec4f(0.0, i1.x, i2.x, 1.0));
    let n_ = 0.142857142857;
    let ns = n_ * D.wyz - D.xzx;
    let j = p - 49.0 * floor(p * ns.z * ns.z);
    let x_ = floor(j * ns.z);
    let y_ = floor(j - 7.0 * x_);
    let x = x_ * ns.x + ns.yyyy;
    let y = y_ * ns.x + ns.yyyy;
    let h = 1.0 - abs(x) - abs(y);
    let b0 = vec4f(x.xy, y.xy);
    let b1 = vec4f(x.zw, y.zw);
    let s0 = floor(b0) * 2.0 + 1.0;
    let s1 = floor(b1) * 2.0 + 1.0;
    let sh = -step(h, vec4f(0.0));
    let a0 = b0.xzyw + s0.xzyw * sh.xxyy;
    let a1 = b1.xzyw + s1.xzyw * sh.zzww;
    var p0 = vec3f(a0.xy, h.x);
    var p1 = vec3f(a0.zw, h.y);
    var p2 = vec3f(a1.xy, h.z);
    var p3 = vec3f(a1.zw, h.w);
    let norm = taylorInvSqrt3d(vec4f(dot(p0, p0), dot(p1, p1), dot(p2, p2), dot(p3, p3)));
    p0 *= norm.x;
    p1 *= norm.y;
    p2 *= norm.z;
    p3 *= norm.w;
    var m = max(0.6 - vec4f(dot(x0, x0), dot(x1, x1), dot(x2, x2), dot(x3, x3)), vec4f(0.0));
    m = m * m;
    return 42.0 * dot(m * m, vec4f(dot(p0, x0), dot(p1, x1), dot(p2, x2), dot(p3, x3)));
}

fn fbmNoise(p: vec2f, freq0: f32, octaves: i32, lacunarity: f32, gain: f32, t: f32, shape: i32) -> f32 {
    var freq = freq0;
    var sum = 0.0;
    var amp = 1.0;
    var total = 0.0;
    for (var i = 0; i < 8; i++) {
        if (i >= octaves) { break; }
        var n = snoise3(vec3f(p * freq, t + f32(i) * 0.3)) * 0.5 + 0.5;
        if (shape == 1) {
            n = abs(n * 2.0 - 1.0);
        } else if (shape == 2) {
            n = 1.0 - abs(n * 2.0 - 1.0);
            n = n * n;
        }
        sum += amp * n;
        total += amp;
        freq *= lacunarity;
        amp *= gain;
    }
    return sum / max(total, 1e-6);
}

fn mod289_4d_v4(x: vec4f) -> vec4f { return x - floor(x * (1.0 / 289.0)) * 289.0; }
fn mod289_4d_f(x: f32) -> f32 { return x - floor(x * (1.0 / 289.0)) * 289.0; }
fn permute4d_v4(x: vec4f) -> vec4f { return mod289_4d_v4(((x * 34.0) + 1.0) * x); }
fn permute4d_f(x: f32) -> f32 { return mod289_4d_f(((x * 34.0) + 1.0) * x); }
fn taylorInvSqrt4d(r: vec4f) -> vec4f { return 1.79284291400159 - 0.85373472095314 * r; }

fn grad4d(j: f32, ip: vec4f) -> vec4f {
    let pxyz = floor(fract(vec3f(j) * ip.xyz) * 7.0) * ip.z - 1.0;
    let pw = 1.5 - dot(abs(pxyz), vec3f(1.0));
    let s = select(vec4f(0.0), vec4f(1.0), vec4f(pxyz, pw) < vec4f(0.0));
    return vec4f(pxyz + (s.xyz * 2.0 - 1.0) * s.w, pw);
}

fn snoise4(v: vec4f) -> f32 {
    const F4 = 0.309016994374947451;
    const C = vec4f(0.138196601125011, 0.276393202250021, 0.414589803375032, -0.447213595499958);
    var i = floor(v + dot(v, vec4f(F4)));
    let x0 = v - i + dot(i, C.xxxx);
    // Rank sorting, Bill Licea-Kane's: i0 holds 0, 1, 2 and 3 once each.
    let isX = step(x0.yzw, x0.xxx);
    let isYZ = step(x0.zww, x0.yyz);
    var i0 = vec4f(isX.x + isX.y + isX.z, 1.0 - isX);
    i0.y += isYZ.x + isYZ.y;
    i0.z += 1.0 - isYZ.x;
    i0.w += 1.0 - isYZ.y;
    i0.z += isYZ.z;
    i0.w += 1.0 - isYZ.z;
    let i3 = clamp(i0, vec4f(0.0), vec4f(1.0));
    let i2 = clamp(i0 - 1.0, vec4f(0.0), vec4f(1.0));
    let i1 = clamp(i0 - 2.0, vec4f(0.0), vec4f(1.0));
    let x1 = x0 - i1 + C.xxxx;
    let x2 = x0 - i2 + C.yyyy;
    let x3 = x0 - i3 + C.zzzz;
    let x4 = x0 + C.wwww;
    i = mod289_4d_v4(i);
    let j0 = permute4d_f(permute4d_f(permute4d_f(permute4d_f(i.w) + i.z) + i.y) + i.x);
    let j1 = permute4d_v4(permute4d_v4(permute4d_v4(permute4d_v4(
        i.w + vec4f(i1.w, i2.w, i3.w, 1.0))
        + i.z + vec4f(i1.z, i2.z, i3.z, 1.0))
        + i.y + vec4f(i1.y, i2.y, i3.y, 1.0))
        + i.x + vec4f(i1.x, i2.x, i3.x, 1.0));
    let ip = vec4f(1.0 / 294.0, 1.0 / 49.0, 1.0 / 7.0, 0.0);
    var p0 = grad4d(j0, ip);
    var p1 = grad4d(j1.x, ip);
    var p2 = grad4d(j1.y, ip);
    var p3 = grad4d(j1.z, ip);
    var p4 = grad4d(j1.w, ip);
    let norm = taylorInvSqrt4d(vec4f(dot(p0, p0), dot(p1, p1), dot(p2, p2), dot(p3, p3)));
    p0 *= norm.x;
    p1 *= norm.y;
    p2 *= norm.z;
    p3 *= norm.w;
    p4 *= taylorInvSqrt4d(vec4f(dot(p4, p4))).x;
    var m0 = max(0.6 - vec3f(dot(x0, x0), dot(x1, x1), dot(x2, x2)), vec3f(0.0));
    var m1 = max(0.6 - vec2f(dot(x3, x3), dot(x4, x4)), vec2f(0.0));
    m0 = m0 * m0;
    m1 = m1 * m1;
    return 49.0 * (dot(m0 * m0, vec3f(dot(p0, x0), dot(p1, x1), dot(p2, x2)))
        + dot(m1 * m1, vec2f(dot(p3, x3), dot(p4, x4))));
}

fn fbmNoiseLoop(p: vec2f, freq0: f32, octaves: i32, lacunarity: f32, gain: f32, c: vec2f, shape: i32) -> f32 {
    var freq = freq0;
    var sum = 0.0;
    var amp = 1.0;
    var total = 0.0;
    for (var i = 0; i < 8; i++) {
        if (i >= octaves) { break; }
        var n = snoise4(vec4f(p * freq, c.x + f32(i) * 0.3, c.y)) * 0.5 + 0.5;
        if (shape == 1) {
            n = abs(n * 2.0 - 1.0);
        } else if (shape == 2) {
            n = 1.0 - abs(n * 2.0 - 1.0);
            n = n * n;
        }
        sum += amp * n;
        total += amp;
        freq *= lacunarity;
        amp *= gain;
    }
    return sum / max(total, 1e-6);
}

fn loopCircle(turn: f32, reach: f32) -> vec2f {
    let angle = 2.0 * PI * turn;
    return reach / (2.0 * PI) * vec2f(cos(angle), sin(angle));
}

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette6_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette6_radius;
    let softness = max(u.u_control_vignette6_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette7_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette7_radius;
    let softness = max(u.u_control_vignette7_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette8_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette8_radius;
    let softness = max(u.u_control_vignette8_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette9_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette9_radius;
    let softness = max(u.u_control_vignette9_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette10_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette10_radius;
    let softness = max(u.u_control_vignette10_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn domainwarp1_output(uv: vec2f) -> vec4f {
    let amplitude = vignette5_mask(uv);
    let frequency = vignette6_mask(uv);
    let octaves = i32(clamp(vignette7_mask(uv), 1.0, 8.0));
    let lacunarity = vignette8_mask(uv);
    let gain = vignette9_mask(uv);
    let t = (u.u_count_domainwarp1_clock.x + u.u_count_domainwarp1_clock.y + vignette4_mask(uv));
    let seed = vignette10_mask(uv);
    let seedOffset = vec2f(seed * 0.1317, seed * 0.0741);
    var warp = vec2f(0.0);
    warp = vec2f(
        fbmNoise(uv * frequency + warp * amplitude + seedOffset + vec2f(0.0, 0.0), frequency, octaves, lacunarity, gain, t, 0),
        fbmNoise(uv * frequency + warp * amplitude + seedOffset + vec2f(5.2, 1.3), frequency, octaves, lacunarity, gain, t, 0));
    let warpedUV = uv + warp * amplitude;
    return checkerboard3_output(warpedUV);
}

fn domainwarp1_value(uv: vec2f) -> f32 {
    let amplitude = vignette5_mask(uv);
    let frequency = vignette6_mask(uv);
    let octaves = i32(clamp(vignette7_mask(uv), 1.0, 8.0));
    let lacunarity = vignette8_mask(uv);
    let gain = vignette9_mask(uv);
    let t = (u.u_count_domainwarp1_clock.x + u.u_count_domainwarp1_clock.y + vignette4_mask(uv));
    let seed = vignette10_mask(uv);
    let seedOffset = vec2f(seed * 0.1317, seed * 0.0741);
    var warp = vec2f(0.0);
    warp = vec2f(
        fbmNoise(uv * frequency + warp * amplitude + seedOffset + vec2f(0.0, 0.0), frequency, octaves, lacunarity, gain, t, 0),
        fbmNoise(uv * frequency + warp * amplitude + seedOffset + vec2f(5.2, 1.3), frequency, octaves, lacunarity, gain, t, 0));
    return clamp(length(warp), 0.0, 1.0);
}

fn rgba11_output(uv: vec2f) -> vec4f {
    return vec4f(domainwarp1_value(uv), u.u_control_rgba11_g, u.u_control_rgba11_b, u.u_control_rgba11_a);
}

fn mix12_output(uv: vec2f) -> vec4f {
    let a = domainwarp1_output(uv);
    let b = rgba11_output(uv);
    let amt = clamp(u.u_control_mix12_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix12_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix12_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix12_output(uv);
}
