tests/snapshots/compile__wgsl_transform_fisheye_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_fisheye1_centerX: f32,
    u_control_fisheye1_centerY: f32,
    u_control_fisheye1_distortion: f32,
    u_control_fisheye1_radius: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn fisheye1_output(uv: vec2f) -> vec4f {
    let center = vec2f(u.u_control_fisheye1_centerX, u.u_control_fisheye1_centerY);
    let centered = uv - center;
    let r = length(centered);
    if (r == 0.0) { return defaultUvMap(uv); }

    let lensRadius = max((u.u_control_fisheye1_radius), 1e-6);
    let normalizedR = r / lensRadius;
    let amount = (u.u_control_fisheye1_distortion) * (1.0 - smoothstep(0.7, 1.0, normalizedR));
    let distortedR = pow(normalizedR, 1.0 + amount) * lensRadius;
    let distortedUV = centered * (distortedR / r) + center;
    return defaultUvMap(distortedUV);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return fisheye1_output(uv);
}
