tests/snapshots/compile__wgsl_transform_geissflow_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_geissflow1_distortionAmount: f32,
    u_control_geissflow1_fadeAmount: f32,
    u_control_geissflow1_feedbackAmount: f32,
    u_control_geissflow1_flowScale: f32,
    u_control_geissflow1_lastFrame: vec4f,
    u_control_geissflow1_phaseOffset: f32,
    u_control_geissflow1_swirl: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_count_geissflow1_clock: vec2f,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn geissflow1_output(uv: vec2f) -> vec4f {
    let flowCoord = uv * u.u_control_geissflow1_flowScale;
    let t = fract(time_periodic(u.u_count_geissflow1_clock, u.u_control_geissflow1_phaseOffset)) * 20.0 * PI;
    let swirl = u.u_control_geissflow1_swirl;
    let noise1 = sin(flowCoord.x * 2.0 + t) * cos(flowCoord.y * 1.5 + t * 0.7);
    let noise2 = cos(flowCoord.x * 1.3 + t * 0.8) * sin(flowCoord.y * 2.2 + t * 0.5);
    let swirl1 = sin(length(flowCoord) * 3.0 + t) * swirl;
    let swirl2 = cos(length(flowCoord * 0.7) * 2.0 - t * 1.2) * swirl * 0.7;
    let around = atan2(flowCoord.y, flowCoord.x);
    var flowVector = vec2f(
        noise1 + swirl1 * cos(around + t),
        noise2 + swirl2 * sin(around + t)
    );
    let fromCenter = length(uv);
    let radialFlow = vec2f(uv.y, -uv.x) * (1.0 / (fromCenter + 0.1)) * swirl * 0.3;
    flowVector += radialFlow;
    let flowLength = length(flowVector);
    let flowDir = select(vec2f(0.0), flowVector / flowLength, flowLength > 1e-6);
    let flowed = uv + flowDir * (u.u_control_geissflow1_distortionAmount * 2.0);
    let feedback = u.u_control_geissflow1_feedbackAmount;
    let older = u.u_control_geissflow1_lastFrame * u.u_control_geissflow1_fadeAmount;
    let live = defaultUvMap(uv);
    let result = mix(older, live, 1.0 - feedback);
    return max(result, live * (1.0 - feedback));
}

fn geissflow1_angle(uv: vec2f) -> f32 {
    let flowCoord = uv * u.u_control_geissflow1_flowScale;
    let t = fract(time_periodic(u.u_count_geissflow1_clock, u.u_control_geissflow1_phaseOffset)) * 20.0 * PI;
    let swirl = u.u_control_geissflow1_swirl;
    let noise1 = sin(flowCoord.x * 2.0 + t) * cos(flowCoord.y * 1.5 + t * 0.7);
    let noise2 = cos(flowCoord.x * 1.3 + t * 0.8) * sin(flowCoord.y * 2.2 + t * 0.5);
    let swirl1 = sin(length(flowCoord) * 3.0 + t) * swirl;
    let swirl2 = cos(length(flowCoord * 0.7) * 2.0 - t * 1.2) * swirl * 0.7;
    let around = atan2(flowCoord.y, flowCoord.x);
    var flowVector = vec2f(
        noise1 + swirl1 * cos(around + t),
        noise2 + swirl2 * sin(around + t)
    );
    let fromCenter = length(uv);
    let radialFlow = vec2f(uv.y, -uv.x) * (1.0 / (fromCenter + 0.1)) * swirl * 0.3;
    flowVector += radialFlow;
    let flowLength = length(flowVector);
    let flowDir = select(vec2f(0.0), flowVector / flowLength, flowLength > 1e-6);
    return fract(atan2(flowDir.y, flowDir.x) / (2.0 * PI) + 0.5);
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(geissflow1_angle(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = geissflow1_output(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
